<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_bk"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        tools:context=".LoginActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/loginHeader"
                android:text="Login"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_marginTop="130dp">

                <EditText
                    android:id="@+id/editTextLoginPhone"
                    style="@style/modifiedEditText"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/login_mobile_number_hint"
                    android:inputType="phone"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextLoginPassword"
                    style="@style/modifiedEditText"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/cirLoginButton"
                style="@style/loginButton"
                android:text="Login"
                android:textSize="15sp"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

            <TextView
                style="@style/parent"
                android:gravity="end"
                android:textStyle="bold"
                android:id="@+id/goto_signup_text"
                android:textSize="15sp"
                android:textColor="@color/primaryTextColor"
                android:text="@string/login_signup_hint"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"/>

        </LinearLayout>
    </ScrollView>


        </LinearLayout>


