<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
android:layout_height="wrap_content"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".doctor.DoctorRegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar_layout">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorAccent"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bk"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_below="@+id/toolbar_layout">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/loginHeader"
    android:text="Register"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="@dimen/loginViewsMargin"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/image_account"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_person_black_24dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputName"
                style="@style/parent"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/editTextRegisterDocName"
                    style="@style/modifiedEditText"
                    android:hint="Doctor Name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:inputType="textPersonName"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/image_cell"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_phone_black_24dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputMobile"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextRegisterDocMobile"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_mobile_number_hint"
                    android:inputType="phone"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/tool"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputAccountName"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">
                <EditText
                    android:id="@+id/editTextRegisterSpType"
                    style="@style/modifiedEditText"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:maxLines="1"
                    android:focusable="false"
                    android:hint="Specialty Type"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/mortar"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextRegisterQualification"
                    style="@style/modifiedEditText"
                    android:hint="Qualification"
                    android:inputType="text"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/tool"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextRegisterDesignation"
                    style="@style/modifiedEditText"
                    android:hint="Designation"
                    android:inputType="text"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/image_gender"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_wc_black_24dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputGender"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextRegisterDocGender"
                    style="@style/modifiedEditText"
                    android:hint="Gender"
                    android:focusable="false"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_email_black_24dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextRegisterDocEmail"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_dialpad_black_24dp"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextRegisterDocPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_location_on_black_24dp"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextRegisterDocPlace"
                    style="@style/modifiedEditText"
                    android:hint="Location"
                    android:inputType="text"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/taka"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextRegisterVisitCost"
                    style="@style/modifiedEditText"
                    android:hint="Visit Cost (Tk)"
                    android:inputType="number"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <Button
            android:id="@+id/cirDocRegisterButton"
            style="@style/loginButton"
            android:text="Signup"
            android:textSize="15sp"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <TextView
            style="@style/parent"
            android:gravity="end"
            android:textStyle="bold"
            android:textSize="15sp"
            android:id="@+id/goto_doc_login_text"
            android:textColor="@color/primaryTextColor"
            android:text="@string/signup_login_hint"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>
</ScrollView>
    </LinearLayout>
</RelativeLayout>